# sso

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  release.yml
crates/server/: Cargo.toml
crates/server/migrations/: 0001_init.sql
crates/server/src/: assets.rs  config.rs  crypto.rs  error.rs  main.rs  models.rs  signing.rs  site.rs  state.rs
crates/server/src/db/: mod.rs
crates/server/src/oauth/: authorize.rs  enduser.rs  mod.rs  token.rs  userinfo.rs
crates/server/src/web/: admin.rs  clients.rs  mod.rs
crates/server/static/: app.css
crates/server/templates/: base.html  login.html  setup.html
crates/server/templates/dashboard/: client_created.html  client_detail.html  clients.html  members.html  secret_created.html  tenants.html
crates/server/templates/oauth/: consent.html  login.html
deploy/: Caddyfile  deploy.sh  sso.service
docs/: DATABASE.md  DEPLOY.md  PQC.md
sdks/go/: README.md  client.go  go.mod  pkce.go
sdks/java/: README.md  pom.xml
sdks/java/src/main/java/io/dalang/sso/: Pkce.java  SsoClient.java
sdks/js/: README.md  package-lock.json  package.json  tsconfig.json
sdks/js/src/: index.ts
sdks/php/: README.md  composer.json
sdks/php/src/: Client.php  OAuthException.php  Pkce.php
sdks/python/: README.md  pyproject.toml
sdks/python/dalang_sso/: __init__.py  client.py
sdks/rust/: Cargo.toml  README.md
sdks/rust/src/: lib.rs
site/: docs.html  index.html  llms.txt  robots.txt  sitemap.xml
