[workspace]
resolver = "2"
members = [
    "crates/server",
    "sdks/rust",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/dalang-io/sso"
authors = ["Dalang <oss@dalang.io>"]

# Release profile tuned for a high-throughput single binary.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true
