[package]
name = "sso-server"
description = "Dalang SSO — self-hosted OAuth 2.0 / OpenID Connect provider + dashboard"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "sso"
path = "src/main.rs"

[dependencies]
# --- async runtime + HTTP ---
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs"] }
axum = { version = "0.7", features = ["macros"] }
axum-extra = { version = "0.9", features = ["cookie", "cookie-signed"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "fs", "compression-gzip"] }

# --- storage: one code path, driver chosen at runtime by DATABASE_URL scheme ---
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio", "any", "sqlite", "postgres", "mysql", "chrono", "uuid",
] }

# --- serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"

# --- crypto / auth ---
jsonwebtoken = "9"
rsa = { version = "0.9", features = ["sha2", "pem"] }
# Post-quantum digital signatures (FIPS 204 / ML-DSA) for token signing.
fips204 = "0.4"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
sha2 = "0.10"
hex = "0.4"

# --- misc ---
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
minijinja = { version = "2", features = ["loader"] }
minijinja-autoreload = "2"
dotenvy = "0.15"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
